--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -49,7 +49,6 @@ $largeBreakpoint: 1350px;
 $sidebar-width: 100%;
 $sidebar-width-md: 320px;
 $sidebar-width-lg: 420px;
-$sidebar-width-xl: 420px;
 $sidebar-tab-select-height: 124px;
 $sidebar-time-select-height: 62px;
 
